--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,21 @@
 body {
-  background pink;
+  background: pink;
 }
 
 h1 {
-  color: blue;
-  fontsize: 3em; 
+  color: blue; 
 }
 
 h2 {
   color: green;
-  font-weight: normal
-  font-style: italic;
+  font-weight : normal;
+  font-style : italic;
 }
 
 .completed {
-  font-family: 12px;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 #tasks .completed {
-  backgound: #ccc;
   text-decoration: underline;
 }
